# GPT2_Reproduce

./: .gitignore  README.md  play.ipynb  pyproject.toml  train_gpt2.py
